--- a/TORNERIA/GestionarAdministracion/Templates/MenuPrincipal/barra_lateral.html
+++ b/TORNERIA/GestionarAdministracion/Templates/MenuPrincipal/barra_lateral.html
@@ -5,12 +5,12 @@
         <li class="accordion-item">
 
         <div class="accordion-header">
-            <strong>Gestionar Usuarios</strong>
+            <strong>Gestionar Administracion</strong>
             <span class="accordion-icon">+</span>
         </div>
 
         <ul class="accordion-content">
-            <li><a href="/lista_clientes/">Clientes</a></li>
+            <li><a href="/registrar_clientes/">Clientes</a></li>
             <li><a href="#">Trabajadorees</a></li>
             <li><a href="#">Administradores</a></li>
         </ul>
